# jupyterlab-collab-mcp

./: .gitignore  .mcp.json  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  COMPARISON.md  PROJECT-PROMPT.md  README.md  RELEASE.md  TESTING.md  package-lock.json  package.json  variable_inspector_round2_results.md  variable_inspector_test_results.md
docs/: astro.config.mjs  package-lock.json  package.json
jlab-mcp/: pyproject.toml
jlab-mcp/src/jlab_mcp/: __init__.py
python/: pyproject.toml
python/src/variable_inspector/: __init__.py  inspector.py
python/tests/: conftest.py  test_builtins.py  test_edge_cases.py  test_numpy.py  test_numpy_realistic.py  test_output_quality.py  test_pandas.py  test_pandas_realistic.py  test_performance.py  test_polars.py  test_polars_realistic.py  test_xarray.py  test_xarray_realistic.py
src/: cell-locks.test.ts  cell-locks.ts  cell-tracker.test.ts  cell-tracker.ts  connection.ts  guide.test.ts  handler-types.ts  handoff-targets.test.ts  handoff-targets.ts  handoff.integration.test.ts  helpers.test.ts  helpers.ts  human-activity.test.ts  human-activity.ts  index.ts  kernel-capture.test.ts  kernel-capture.ts  kernel-client.test.ts  kernel-client.ts  notebook-fs.test.ts  notebook-fs.ts  notebook-tools-fs.test.ts  notifications.test.ts  notifications.ts  rename.test.ts  rename.ts  report-issue.test.ts  rtc-availability.test.ts  run-store.test.ts  run-store.ts  save-message.test.ts  schemas.ts  snapshots.test.ts  snapshots.ts  test.ts  tool-helpers.ts  update-and-execute-range.test.ts  variable-inspector.test.ts  (+1 more)
(+32 files in other folders)
