[project]
name = "jlab-mcp"
version = "0.1.0"
description = "Launch JupyterLab with collaboration extensions for MCP"
requires-python = ">=3.10"
license = "MIT"
keywords = ["jupyterlab", "jupyter", "mcp", "collaboration"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Framework :: Jupyter :: JupyterLab",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
]

[project.urls]
Homepage = "https://github.com/ianhi/jupyterlab-collab-mcp"
Documentation = "https://ianhi.github.io/jupyterlab-collab-mcp/jlab-mcp/"

[project.scripts]
jlab-mcp = "jlab_mcp:main"
jupyter-collab = "jlab_mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
